--- a/map2.html
+++ b/map2.html
@@ -8,7 +8,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style2.css"/>
 
 </head>
 
@@ -17,7 +17,7 @@
     <div id="legend"></div>
     <div id="title">US Covid Cases</div>
     <div id="subtitle">2020</div>
-    <script src="js/main.js"></script>
+    <script src="js/main2.js"></script>
 
 </body>
 
